--- a/src/pages/lipohd.astro
+++ b/src/pages/lipohd.astro
@@ -7,8 +7,9 @@ import { Footer2 } from '../components/footer-02.jsx';
 const productData = {
   productName: "Lipo HD 360",
   productImage: "https://res.cloudinary.com/dsulhqvza/image/upload/f_auto,q_auto,w_1200/v1761575584/lipohd_zg9lxy.png",
+  secondaryImages: ['https://res.cloudinary.com/dsulhqvza/image/upload/f_auto,q_auto,w_1200/v1761549485/catalogo-mvvnatural-3_fpfmfj.webp'],
   productUrl: "/lipohd",
-  description: "Lipo HD 360 sin cirugía es el suplemento de 30 cápsulas que trabaja mediante la inhibición del apetito, por lo cual lograrás déficit calórico, lo que llevará a la pérdida de grasa corporal y visceral. Dale un giro a tu figura con 30 cápsulas que ayudan a inhibir el apetito y provocar sensación de saciedad. Aporta gran cantidad de energía mejorando el rendimiento físico y mental y por lo tanto combatir la fatiga y el estrés. Combate la flacidez ya que sus componentes ayudan a generar músculo magro logrando bajar de peso y tonificar a la vez.",
+  description: "Lipo HD 360 sin cirugía es el suplemento de 30 cápsulas que trabaja mediante la inhibición del apetito, por lo cual lograrás déficit calórico, lo que llevará a la pérdida de grasa corporal y visceral. Dale un giro a tu figura con 30 cápsulas que ayudan a inhibir el apetito y provocar sensación de saciedad. Aporta gran cantidad de energía mejorando el rendimiento físico y mental y por lo tanto combatir la fatiga y el estrés. Combate la flacidez ya que sus componentes ayudan a generar músculo magro logrando bajar de peso y tonificar a la vez. Dale un giro a tu figura. Lipo HD sin cirugía. Inhibe el apetito, déficit calórico, pérdida de grasa visceral. Contiene ingredientes como L-carnitina, wakame, semilla de pomelo, hamamelis, jengibre, té verde, diente de león, etc. 30 cápsulas.",
   benefits: [
     "Trabaja mediante la inhibición del apetito",
     "Lograrás déficit calórico efectivo",
