--- a/src/pages/primrose.astro
+++ b/src/pages/primrose.astro
@@ -7,6 +7,7 @@ import { Footer2 } from '../components/footer-02.jsx';
 const productData = {
   productName: "Prime Rose",
   productImage: "https://res.cloudinary.com/dsulhqvza/image/upload/f_auto,q_auto,w_1200/v1761575597/primerose_jk26zj.png",
+  secondaryImages: ['https://res.cloudinary.com/dsulhqvza/image/upload/f_auto,q_auto,w_1200/v1761549565/catalogo-mvvnatural-23_jdfcan.webp'],
   productUrl: "/primrose",
   description: "PRIME ROSE resalta tus curvas y moldea tu cuerpo. Alternativa no quirúrgica para aumentar y tonificar senos. Regula el sistema endocrino. Aumenta los fitoestrógenos entre los que destaca el miroestrol. Mejora la energía. Baja la testosterona causante de bello facial, depresión, caída de cabello, falta de libido entre otros trastornos. Mejora tus curvas femeninas. Construye músculo. 60 cápsulas con Maca, Aguaje, Hinojo, Pueraria Marifca.",
   benefits: [
