--- a/src/pages/productos.astro
+++ b/src/pages/productos.astro
@@ -8,6 +8,8 @@ import SeoIntro from '../components/seo-intro.astro';
 import { Product4 } from '../components/product-04.jsx';
 import { Product4_1 } from '../components/product-04_1.jsx';
 import { Product4_2 } from '../components/product-04_2.jsx';
+import { Product4_3 } from '../components/product-04_3.jsx';
+import { Product4_4 } from '../components/product-04_4.jsx';
 import { Cta25 } from '../components/cta-25.jsx';
 import Cta25_1 from '../components/cta-25_1.astro';
 import { Footer2 } from '../components/footer-02.jsx';
@@ -46,6 +48,8 @@ const breadcrumbSchema = {
     <Product4 client:visible />
     <Product4_1 client:visible />
     <Product4_2 client:visible />
+    <Product4_3 client:visible />
+    <Product4_4 client:visible />
     
     {/* CTAs después de ver productos */}
     <Cta25 client:idle />
