--- a/src/pages/slimcoffee.astro
+++ b/src/pages/slimcoffee.astro
@@ -7,6 +7,7 @@ import { Footer2 } from '../components/footer-02.jsx';
 const productData = {
   productName: "Slim Coffee Thermogenic",
   productImage: "https://res.cloudinary.com/dsulhqvza/image/upload/f_auto,q_auto,w_1200/v1761575569/SlimCoffee_tfczj8.png",
+  secondaryImages: ['https://res.cloudinary.com/dsulhqvza/image/upload/f_auto,q_auto,w_1200/v1761549565/catalogo-mvvnatural-29_fqn4vq.webp'],
   productUrl: "/slimcoffee",
   description: "SLIM COFFE THERMOGENIC para los amantes del café. Quema grasa tomando café. SLIM COFFE con ingredientes diseñados para la pérdida de grasa. Alto poder antioxidante. Actúa como un estimulante del metabolismo acelerándolo. Científicamente está comprobado que te ayuda a bajar de peso pues quema la grasa con más rapidez y las que están depositadas van desapareciendo. Disminuye el apetito, elimina la lipogénesis, disminuye el colesterol malo. Gracias a la termogénesis estimula la producción de calor corporal, lo que aumenta el gasto energético, contribuye a la pérdida de peso. 100 gramos de café termogénico adelgazante.",
   benefits: [
