--- a/src/pages/hflex.astro
+++ b/src/pages/hflex.astro
@@ -7,8 +7,9 @@ import { Footer2 } from '../components/footer-02.jsx';
 const productData = {
   productName: "H-Flex",
   productImage: "https://res.cloudinary.com/dsulhqvza/image/upload/f_auto,q_auto,w_1200/v1761575568/HFlex_vl3kef.png",
+  secondaryImages: ['https://res.cloudinary.com/dsulhqvza/image/upload/f_auto,q_auto,w_1200/v1761549507/catalogo-mvvnatural-8_kctrrh.webp'],
   productUrl: "/hflex",
-  description: "H-Flex recupera tu flexibilidad con triple fuerza y 100% efectivo contra el dolor. Soporta artritis degenerativa, artrosis y fibromialgia. Resultados a los 7 días. Auxiliar en dolores articulares, recupera tu flexibilidad y mejora dolor en hombro, columna, codos, cadera, rodilla y tobillo. Triple fuerza que te ayuda a recuperar movilidad completa. 100% efectivo contra el dolor articular y problemas de flexibilidad. Obtén resultados a los 7 días con H-Flex.",
+  description: "H-Flex recupera tu flexibilidad con triple fuerza y 100% efectivo contra el dolor. Soporta artritis degenerativa, artrosis y fibromialgia. Resultados a los 7 días. Auxiliar en dolores articulares, recupera tu flexibilidad y mejora dolor en hombro, columna, codos, cadera, rodilla y tobillo. Triple fuerza que te ayuda a recuperar movilidad completa. 100% efectivo contra el dolor articular y problemas de flexibilidad. Obtén resultados a los 7 días con H-Flex. Recupera tu flexibilidad. Triple fuerza en 7 días. Recomendado para dolor articular, artritis, artrosis y fibromialgia. 100% efectivo. Ingredientes: cloruro de magnesio, cúrcuma, jengibre, raíz rarámuri, ortiga, glucosamina, condroitina.",
   benefits: [
     "Recupera tu flexibilidad con triple fuerza",
     "100% efectivo contra el dolor articular",
