--- a/src/pages/sosburn-sensitive.astro
+++ b/src/pages/sosburn-sensitive.astro
@@ -7,6 +7,7 @@ import { Footer2 } from '../components/footer-02.jsx';
 const productData = {
   productName: "SOS Burn Sensitive",
   productImage: "https://res.cloudinary.com/dsulhqvza/image/upload/f_auto,q_auto,w_1200/v1761575600/sosburnsensitive_dfsrs1.png",
+  secondaryImages: ['https://res.cloudinary.com/dsulhqvza/image/upload/f_auto,q_auto,w_1200/v1761549520/catalogo-mvvnatural-11_we83am.webp'],
   productUrl: "/sosburn-sensitive",
   description: "S&S BURN Sensitive llegó la solución para personas diabéticas, hipertensas e hipotiroidismo. Potente quema grasa indicado para grasa rebelde. Saciador e inhibidor del apetito. Acelerador del metabolismo. 5 veces más aporte de energía sin efecto rebote. Para él y para ella. Quema grasa intenso, energizante y adelgazante. Sin efecto rebote garantizado.",
   benefits: [
