--- a/src/pages/higa2.astro
+++ b/src/pages/higa2.astro
@@ -7,7 +7,7 @@ import { Footer2 } from '../components/footer-02.jsx';
 const productData = {
   productName: "Higa2 Hepato Protector",
   productImage: "https://res.cloudinary.com/dsulhqvza/image/upload/f_auto,q_auto,w_1200/v1761549558/catalogo-mvv-natural-26_aqrhoz.webp",
-  secondaryImages: ['https://res.cloudinary.com/dsulhqvza/image/upload/f_auto,q_auto,w_1200/v1761549558/catalogo-mvv-natural-26_aqrhoz.webp"/higa2",
+  secondaryImages: ['https://res.cloudinary.com/dsulhqvza/image/upload/f_auto,q_auto,w_1200/v1761549558/catalogo-mvv-natural-26_aqrhoz.webp'],
   description: "Higa2 Hepato Protector es el suplemento de 60 cápsulas vegetales para recuperar salud intestinal y proteger tu hígado. Indicado para hígado graso, abuso de alcohol, abuso de comidas, trastornos hepáticos, desintoxicante, hepatitis y control de peso. Producto orgánico all natural que mejora notablemente todo tipo de colitis y trastornos estomacales como gases, diarrea causada por colitis, así como estreñimiento. Desintoxicante natural para tu hígado y sistema digestivo.",
   benefits: [
     "Protege y mejora hígado graso",
