--- a/src/pages/colit6.astro
+++ b/src/pages/colit6.astro
@@ -7,7 +7,7 @@ import { Footer2 } from '../components/footer-02.jsx';
 const productData = {
   productName: "COLIT 6",
   productImage: "https://res.cloudinary.com/dsulhqvza/image/upload/f_auto,q_auto,w_1200/v1761549549/catalogo-mvv-natural-22_bvgzpm.webp",
-  secondaryImages: ['https://res.cloudinary.com/dsulhqvza/image/upload/f_auto,q_auto,w_1200/v1761549549/catalogo-mvv-natural-22_bvgzpm.webp"/colit6",
+  secondaryImages: ['https://res.cloudinary.com/dsulhqvza/image/upload/f_auto,q_auto,w_1200/v1761549549/catalogo-mvv-natural-22_bvgzpm.webp'],
   description: "COLIT 6 recupera tu salud intestinal mejorando notablemente todo tipo de colitis y trastornos estomacales como gases, diarrea causada por colitis, así como estreñimiento. Mejora notablemente todo tipo de colitis y trastornos estomacales. Efectivo para gases, dolor abdominal, inflamación de abdomen, diarrea o estreñimiento, fatiga, espasmos abdominales y sangrado en evacuaciones. 60 cápsulas que recuperan tu salud intestinal con ingredientes naturales.",
   benefits: [
     "Gases",
