--- a/src/pages/macapremium.astro
+++ b/src/pages/macapremium.astro
@@ -7,7 +7,7 @@ import { Footer2 } from '../components/footer-02.jsx';
 const productData = {
   productName: "Maca Premium Peruana",
   productImage: "https://res.cloudinary.com/dsulhqvza/image/upload/f_auto,q_auto,w_1200/v1761549552/catalogo-mvv-natural-19_nbmjhq.webp",
-  secondaryImages: ["https://res.cloudinary.com/dsulhqvza/image/upload/f_auto,q_auto,w_1200/v1761549548/catalogo-mvv-natural-20_aihpsv.webp"],
+  secondaryImages: ["https://res.cloudinary.com/dsulhqvza/image/upload/f_auto,q_auto,w_1200/v1761549733/catalogo-mvvnatural-19_aabf7p.webp", "https://res.cloudinary.com/dsulhqvza/image/upload/f_auto,q_auto,w_1200/v1761549733/catalogo-mvvnatural-20_zplemr.webp"],
   ingredients: [
     "Extracto de Maca Peruana 1500mg (equivalente a 15,000mg)",
     "Maca Negra - Libido y energía en hombres",
