--- a/src/pages/primrose.astro
+++ b/src/pages/primrose.astro
@@ -7,7 +7,7 @@ import { Footer2 } from '../components/footer-02.jsx';
 const productData = {
   productName: "Prime Rose",
   productImage: "https://res.cloudinary.com/dsulhqvza/image/upload/f_auto,q_auto,w_1200/v1761549565/catalogo-mvv-natural-23_jdfcan.webp",
-  secondaryImages: ["https://res.cloudinary.com/dsulhqvza/image/upload/f_auto,q_auto,w_1200/v1761549485/catalogo-mvv-natural-23_jdfcan.webp", "https://res.cloudinary.com/dsulhqvza/image/upload/f_auto,q_auto,w_1200/v1761549485/catalogo-mvv-natural-24_svcf1o.webp"],
+  secondaryImages: ["https://res.cloudinary.com/dsulhqvza/image/upload/f_auto,q_auto,w_1200/v1761549733/catalogo-mvvnatural-23_xxwr78.webp"],
   ingredients: [
     "Maca - Energía, resistencia y vitalidad",
     "Aguaje - Fitoestrógenos y curvas femeninas",
