--- a/src/pages/sosburn-sensitive.astro
+++ b/src/pages/sosburn-sensitive.astro
@@ -7,7 +7,7 @@ import { Footer2 } from '../components/footer-02.jsx';
 const productData = {
   productName: "SOS Burn Sensitive",
   productImage: "https://res.cloudinary.com/dsulhqvza/image/upload/f_auto,q_auto,w_1200/v1761549520/catalogo-mvv-natural-11_we83am.webp",
-  secondaryImages: ['https://res.cloudinary.com/dsulhqvza/image/upload/f_auto,q_auto,w_1200/v1761549520/catalogo-mvv-natural-11_we83am.webp'],
+  secondaryImages: ["https://res.cloudinary.com/dsulhqvza/image/upload/f_auto,q_auto,w_1200/v1761549733/catalogo-mvvnatural-11_hqpxok.webp"],
   description: "S&S BURN Sensitive llegó la solución para personas diabéticas, hipertensas e hipotiroidismo. Potente quema grasa indicado para grasa rebelde. Saciador e inhibidor del apetito. Acelerador del metabolismo. 5 veces más aporte de energía sin efecto rebote. Para él y para ella. Quema grasa intenso, energizante y adelgazante. Sin efecto rebote garantizado.",
   benefits: [
     "Potente quema grasa para grasa rebelde",
