--- a/src/pages/sosburn-clear.astro
+++ b/src/pages/sosburn-clear.astro
@@ -6,8 +6,8 @@ import { Footer2 } from '../components/footer-02.jsx';
 
 const productData = {
   productName: "SOS Burn Clean",
-  productImage: "https://res.cloudinary.com/dsulhqvza/image/upload/f_auto,q_auto,w_1200/v1761549528/catalogo-mvvnatural-12_pd7yxq.webp",
-  secondaryImages: ["https://res.cloudinary.com/dsulhqvza/image/upload/f_auto,q_auto,w_1200/v1761549733/catalogo-mvvnatural-12_vhazhu.webp"],
+  productImage: "https://res.cloudinary.com/dsulhqvza/image/upload/f_auto,q_auto,w_1200/v1761549528/catalogo-mvv-natural-12_pd7yxq.webp",
+  secondaryImages: ['https://res.cloudinary.com/dsulhqvza/image/upload/f_auto,q_auto,w_1200/v1761549733/catalogo-mvv-natural-12_vhazhu.webp'],
   description: "SOS BURN Clean control de apetito y mejora del tracto intestinal. 24 HR PURIFIC SLIM para él y para ella. Desintoxica, diurética, depura el cuerpo. Mejora el estreñimiento, reduce azúcar en la sangre, baja de peso, mejora el sueño, quita dolor muscular y reduce niveles de colesterol. 30 cápsulas purificantes y adelgazantes.",
   benefits: [
     "Desintoxica profundamente el organismo",
