--- a/src/pages/sosburn.astro
+++ b/src/pages/sosburn.astro
@@ -6,8 +6,8 @@ import { Footer2 } from '../components/footer-02.jsx';
 
 const productData = {
   productName: "SOS Burn",
-  productImage: "https://res.cloudinary.com/dsulhqvza/image/upload/f_auto,q_auto,w_1200/v1761549517/catalogo-mvvnatural-10_vs3aqv.webp",
-  secondaryImages: ["https://res.cloudinary.com/dsulhqvza/image/upload/f_auto,q_auto,w_1200/v1761549733/catalogo-mvvnatural-10_drstvu.webp"],
+  productImage: "https://res.cloudinary.com/dsulhqvza/image/upload/f_auto,q_auto,w_1200/v1761549517/catalogo-mvv-natural-10_vs3aqv.webp",
+  secondaryImages: ['https://res.cloudinary.com/dsulhqvza/image/upload/f_auto,q_auto,w_1200/v1761549733/catalogo-mvv-natural-10_drstvu.webp'],
   description: "S&S BURN quita ansiedad y baja de peso. Gracias a sus ingredientes perfectamente diseñados logras la pérdida de peso contundente y eliminar esa grasa difícil de tu cuerpo. SOS BURN ayuda a inhibir el apetito y provocar sensación de saciedad. Aporta gran cantidad de energía mejorando el rendimiento físico y mental y por lo tanto combatir la fatiga y el estrés. Combate la flacidez ya que sus componentes ayudan a generar músculo magro logrando bajar de peso y tonificar a la vez. Logra resultados en los primeros 15 días comenzando por el vientre, pierde tallas y kilos de grasa. Lograrás mantener un balance en tu digestión ya que no causa estreñimiento pero no laxa. SOSBURN ayuda a agilizar hasta 5 veces tu metabolismo lo que elimina la lipogénesis y disminuye el colesterol malo y triglicéridos. Para él y para ella. 30 cápsulas. Quita ansiedad y baja de peso. Quema grasa, inhibe el apetito y brinda energía. Resultados en 15 días. Acelera el metabolismo 5 ×, reduce colesterol y triglicéridos. Ingredientes: acetil-L-carnitina, extracto de semilla de griffonia, simpirolita 5-HTP, inositol, cromo, vitamina B6.",
   benefits: [
     "Quita ansiedad y baja de peso efectivamente",
