--- a/src/pages/chupapanza.astro
+++ b/src/pages/chupapanza.astro
@@ -6,8 +6,8 @@ import { Footer2 } from '../components/footer-02.jsx';
 
 const productData = {
   productName: "Chupa Panza",
-  productImage: "https://res.cloudinary.com/dsulhqvza/image/upload/f_auto,q_auto,w_1200/v1761549515/catalogo-mvvnatural-13_lcfatz.webp",
-  secondaryImages: ["https://res.cloudinary.com/dsulhqvza/image/upload/f_auto,q_auto,w_1200/v1761549733/catalogo-mvvnatural-13_hdnhdg.webp"],
+  productImage: "https://res.cloudinary.com/dsulhqvza/image/upload/f_auto,q_auto,w_1200/v1761549515/catalogo-mvv-natural-13_lcfatz.webp",
+  secondaryImages: ['https://res.cloudinary.com/dsulhqvza/image/upload/f_auto,q_auto,w_1200/v1761549733/catalogo-mvv-natural-13_hdnhdg.webp'],
   description: "Chupa Panza es la fórmula potente termogénica de 30 cápsulas para eliminar vientre abultado, reducir tallas y quemar grasa difícil. Poderoso quema grasas, desintoxica, diurético y ayuda con problemas de estreñimiento. Fórmula diseñada para quemar grasa saturada, modelar cuerpo e inhibir apetito. Efectivo para la quema de grasa efectiva y elimina líquidos retenidos. Tonificador natural que desintoxica profundamente el organismo. Ideal para reducir medidas visiblemente y eliminar ese vientre abultado que no se va. 30 cápsulas de concentrado natural.",
   benefits: [
     "Fórmula potente termogénica para quema de grasa difícil",
